[Bug #21551] changing the exception to be isolationerror rather than argument error